--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main/main.9e259b752d8eedb7b652.css?57481aa7aa944ebc1579"/>
+    <link rel="stylesheet" href="main/main.9e259b752d8eedb7b652.css?d02b41ede099f713ac7d"/>
 
     <title>Поиск новостей</title>
 </head>
@@ -60,7 +60,7 @@
           <input type="password" name="enterpassword" minlength="2" maxlength="30"   class="form__input form__input_type-password" placeholder="Введите пароль">
           <p id = "error-enterpassword" class =  "form__error-valid">Неправильный формат пароля </p>
           <p class = "form__error-valid form__error-valid__registration" id="error-email-or-password"></p>
-          <button class="button form__button enter-button ">Войти</button>
+          <button class="button form__button enter-button " disabled>Войти</button>
           <p class="or-registration">Или <span class="or-registration__link or-registration__link_registration">Зарегистрироваться</span></p>
       </form>
 
@@ -153,7 +153,7 @@
           </a>
         </div>
   </footer>
-     <script src="main/main.cd4efbcb71a00d4f05fa.js?57481aa7aa944ebc1579"></script>
+     <script src="main/main.cab51c78763de76c09cd.js?d02b41ede099f713ac7d"></script>
 
 </body>
 </html>
