--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main/main.79a41512e2e8e564a267.css?f61198fe889e3c484e32"/>
+    <link rel="stylesheet" href="main/main.d85c8916333653a4152f.css?8a1ac59b9dab164553fe"/>
 
     <title>Поиск новостей</title>
 </head>
@@ -30,10 +30,11 @@
                   </div>
                   <ul class="header__menu header__menu_mobile">
                     <li class="header__main header__main_mobile"><a href="./index.html" >Главная</a></li>
-                    <li class="header__saved-articles header__saved-articles_mobile"><a href="./secondary/index.html" >Сохраненные статьи</a></li>
-                    <li class = "header__name-menu header__name-menu_mobile">
-                      <a href="./index.html" class="header__name header__name_mobile ">Антон </a>
-                      <a href="./index.html" class="header__name header__name-icon_mobile"><img alt="иконка выхода" src = "./images/logout.png"/></a>
+                    <li class="header__saved-articles header__saved-articles_mobile display-none"><a href="./secondary/index.html" >Сохраненные статьи</a></li>
+                    <li class="header__auth header__auth_mobile"><a href="./index.html" >Авторизоваться</a></li>
+                    <li class = "header__name-menu header__name-menu_mobile display-none">
+                      <h3 class="header__name header__name_mobile "></h3>
+                      <div class="header__name header__name-icon_mobile"><img alt="иконка выхода" src = "./images/logout.png"/></div>
                     </li>
                   </ul>
             </div>
@@ -153,7 +154,7 @@
           </a>
         </div>
   </footer>
-     <script src="main/main.4c66d1f08a6472aa4e68.js?f61198fe889e3c484e32"></script>
+     <script src="main/main.4c66d1f08a6472aa4e68.js?8a1ac59b9dab164553fe"></script>
 
 </body>
 </html>
