--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main/main.c45e98a0996bbbcc27d5.css?5065262516830b51752b"/>
+    <link rel="stylesheet" href="main/main.c45e98a0996bbbcc27d5.css?0c88c334ecf8c677407e"/>
 
     <title>Поиск новостей</title>
 </head>
@@ -31,7 +31,7 @@
                   <ul class="header__menu header__menu_mobile">
                     <li class="header__main header__main_mobile"><a href="./index.html" >Главная</a></li>
                     <li class="header__saved-articles header__saved-articles_mobile display-none"><a href="./secondary/index.html" >Сохраненные статьи</a></li>
-                    <li class="header__auth header__auth_mobile"><a href="./index.html" >Авторизоваться</a></li>
+                    <li class="header__auth header__auth_mobile display-none"><a href="./index.html" >Авторизоваться</a></li>
                     <li class = "header__name-menu header__name-menu_mobile display-none">
                       <h3 class="header__name header__name_mobile "></h3>
                       <div class="header__name header__name-icon_mobile"><img alt="иконка выхода" src = "./images/logout.png"/></div>
@@ -154,7 +154,7 @@
           </a>
         </div>
   </footer>
-     <script src="main/main.4c66d1f08a6472aa4e68.js?5065262516830b51752b"></script>
+     <script src="main/main.4c66d1f08a6472aa4e68.js?0c88c334ecf8c677407e"></script>
 
 </body>
 </html>
