--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main/main.c45e98a0996bbbcc27d5.css?97ff9ead8626ec7a4e81"/>
+    <link rel="stylesheet" href="main/main.c45e98a0996bbbcc27d5.css?26f421c355025d9e7fc6"/>
 
     <title>Поиск новостей</title>
 </head>
@@ -34,7 +34,7 @@
                     <li class="header__auth header__auth_mobile "><a href="./index.html" >Авторизоваться</a></li>
                     <li class = "header__name-menu header__name-menu_mobile display-none">
                       <h3 class="header__name header__name_mobile "></h3>
-                      <div class="header__name header__name-icon_mobile"><img alt="иконка выхода" src = "./images/logout.png"/></div>
+                      <div class="header__name header__name-icon_mobile"><img class="header__name-image" alt="иконка выхода" src = "./images/logout.png"/></div>
                     </li>
                   </ul>
             </div>
@@ -154,7 +154,7 @@
           </a>
         </div>
   </footer>
-     <script src="main/main.4c66d1f08a6472aa4e68.js?97ff9ead8626ec7a4e81"></script>
+     <script src="main/main.4c66d1f08a6472aa4e68.js?26f421c355025d9e7fc6"></script>
 
 </body>
 </html>
