--- a/secondary/index.html
+++ b/secondary/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../secondary/secondary.b58dbaebffcee3be3b59.css?97ff9ead8626ec7a4e81">
+    <link rel="stylesheet" href="../secondary/secondary.b58dbaebffcee3be3b59.css?26f421c355025d9e7fc6">
         <title>Поиск новостей</title>
    </head>
 <body>
@@ -20,6 +20,22 @@
             </div>
             <img src = ".././images/menu.png" alt="иконка меню" class="header__menu-mobile-img"><!--это элемент блока, а не модификатор-->
         </header>
+        <div class="body-mobile display-none">
+          <div class="mobile">
+                <div class="mobile__header">
+                  <h1 class="header__tittle header__tittle_mobile">NewsExplorer</h1>
+                  <img src = "./images/back.png" alt="иконка меню" class="header__menu-mobile-img" id ="exit">
+                </div>
+                <ul class="header__menu header__menu_mobile">
+                  <li class="header__main header__main_mobile"><a href="./index.html" >Главная</a></li>
+                  <li class="header__saved-articles header__saved-articles_mobile display-none"><a href="./index.html" >Сохраненные статьи</a></li>
+                  <li class = "header__name-menu header__name-menu_mobile display-none">
+                    <h3 class="header__name header__name_mobile "></h3>
+                    <div class="header__name header__name-icon_mobile"><img class="header__name-image" alt="иконка выхода" src = "./images/logout-black_01.png"/></div>
+                  </li>
+                </ul>
+          </div>
+      </div>
         <div class="search-menu search-menu_saved">
           <h3 class="search-menu__uppersubtitle-saved"> Сохраненные статьи </h3> <!--это элемент блока, а не модификатор-->
           <h2 class="search-menu__tittle black search-menu__tittle_saved"> </h2>
@@ -58,7 +74,7 @@
       </a>
     </div>
 </footer>
-  <script src="../secondary/secondary.60541a633785890162f5.js?97ff9ead8626ec7a4e81"></script>
+  <script src="../secondary/secondary.60541a633785890162f5.js?26f421c355025d9e7fc6"></script>
 </body>
 </html>
 
