--- a/secondary/index.html
+++ b/secondary/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../secondary/secondary.b58dbaebffcee3be3b59.css?26f421c355025d9e7fc6">
+    <link rel="stylesheet" href="../secondary/secondary.bc546b3c83d332f881e6.css?a3187c1ae4b32fbff98d">
         <title>Поиск новостей</title>
    </head>
 <body>
@@ -24,14 +24,14 @@
           <div class="mobile">
                 <div class="mobile__header">
                   <h1 class="header__tittle header__tittle_mobile">NewsExplorer</h1>
-                  <img src = "./images/back.png" alt="иконка меню" class="header__menu-mobile-img" id ="exit">
+                  <img src = ".././images/back.png" alt="иконка меню" class="header__menu-mobile-img" id ="exit">
                 </div>
                 <ul class="header__menu header__menu_mobile">
                   <li class="header__main header__main_mobile"><a href="./index.html" >Главная</a></li>
                   <li class="header__saved-articles header__saved-articles_mobile display-none"><a href="./index.html" >Сохраненные статьи</a></li>
                   <li class = "header__name-menu header__name-menu_mobile display-none">
                     <h3 class="header__name header__name_mobile "></h3>
-                    <div class="header__name header__name-icon_mobile"><img class="header__name-image" alt="иконка выхода" src = "./images/logout-black_01.png"/></div>
+                    <div class="header__name header__name-icon_mobile"><img class="header__name-image" alt="иконка выхода" src = ".././images/logout-black_01.png"/></div>
                   </li>
                 </ul>
           </div>
@@ -74,7 +74,7 @@
       </a>
     </div>
 </footer>
-  <script src="../secondary/secondary.60541a633785890162f5.js?26f421c355025d9e7fc6"></script>
+  <script src="../secondary/secondary.60541a633785890162f5.js?a3187c1ae4b32fbff98d"></script>
 </body>
 </html>
 
