--- a/secondary/index.html
+++ b/secondary/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../secondary/secondary.62b70e1e768c003bfc54.css?3a5d81e819f4f9c2b8aa">
+    <link rel="stylesheet" href="../secondary/secondary.152c2d3563fe952c9494.css?b1e3b01a04e2d6f5ff05">
         <title>Поиск новостей</title>
    </head>
 <body>
@@ -31,7 +31,7 @@
                   <li class="header__saved-articles header__saved-articles_mobile display-none"><a href="./index.html" >Сохраненные статьи</a></li>
                   <li class = "header__name-menu header__name-menu_mobile display-none">
                     <h3 class="header__name header__name_mobile "></h3>
-                    <div class="header__name header__name-icon_mobile"><img class="header__name-image" alt="иконка выхода" src = ".././images/logout-black_01.png"/></div>
+                    <div class="header__name header__name-icon_mobile"><img class="header__name-image" alt="иконка выхода" src = ".././images/logout.png"/></div>
                   </li>
                 </ul>
           </div>
@@ -74,7 +74,7 @@
       </a>
     </div>
 </footer>
-  <script src="../secondary/secondary.60541a633785890162f5.js?3a5d81e819f4f9c2b8aa"></script>
+  <script src="../secondary/secondary.60541a633785890162f5.js?b1e3b01a04e2d6f5ff05"></script>
 </body>
 </html>
 
