--- a/secondary/index.html
+++ b/secondary/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../secondary/secondary.152c2d3563fe952c9494.css?b1e3b01a04e2d6f5ff05">
+    <link rel="stylesheet" href="../secondary/secondary.ef12238eab7fb3c99933.css?43ccc0ac88a6a7d71643">
         <title>Поиск новостей</title>
    </head>
 <body>
   <section class="search search_saved">
         <header class="header header_saved">
           <p class="header__tittle black">NewsExplorer</p>
-            <div class="header__menu  saved">
+            <div class="header__menu  ">
                <a href="../index.html" class="header__main header__main_saved black">Главная</a>
                <a href="./index.html" class="header__saved-articles header__saved-articles_saved black">Сохраненные статьи</a>
-               <div class="header__name-menu header__name-menu_saved saved">
+               <div class="header__name-menu header__name-menu_saved ">
                   <h3 class="header__name  black"></h3>
                   <div class="header__name-icon"><img class="header__name-image"  alt="иконка выхода" src = ".././images/logout-black_01.png"/></div>
                  </div>
@@ -74,7 +74,7 @@
       </a>
     </div>
 </footer>
-  <script src="../secondary/secondary.60541a633785890162f5.js?b1e3b01a04e2d6f5ff05"></script>
+  <script src="../secondary/secondary.60541a633785890162f5.js?43ccc0ac88a6a7d71643"></script>
 </body>
 </html>
 
