--- a/secondary/index.html
+++ b/secondary/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../secondary/secondary.19afe252ed2e15475a50.css?385f739975c13ed9f3dd">
+    <link rel="stylesheet" href="../secondary/secondary.23174434c0b12ede26e2.css?0b343273a4b6ce271add">
         <title>Поиск новостей</title>
    </head>
 <body>
@@ -27,9 +27,9 @@
                   <img src = ".././images/back.png" alt="иконка меню" class="header__menu-mobile-img" id ="exit">
                 </div>
                 <ul class="header__menu header__menu_mobile">
-                  <li class="header__main header__main_mobile"><a href="./index.html" >Главная</a></li>
+                  <li class="header__main header__main_mobile"><a href="../index.html" >Главная</a></li>
                   <li class="header__saved-articles header__saved-articles_mobile display-none"><a href="./index.html" >Сохраненные статьи</a></li>
-                  <li class = "header__name-menu header__name-menu_mobile display-none">
+                  <li class = "header__name-menu header__name-menu_mobile ">
                     <h3 class="header__name header__name_mobile "></h3>
                     <div class="header__name header__name-icon_mobile"><img class="header__name-image" alt="иконка выхода" src = ".././images/logout.png"/></div>
                   </li>
@@ -74,7 +74,7 @@
       </a>
     </div>
 </footer>
-  <script src="../secondary/secondary.60541a633785890162f5.js?385f739975c13ed9f3dd"></script>
+  <script src="../secondary/secondary.60541a633785890162f5.js?0b343273a4b6ce271add"></script>
 </body>
 </html>
 
