--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main/main.d5060b58117dde7ce0eb.css?aa372502bbe7b44b5edd"/>
+    <link rel="stylesheet" href="main/main.6a7df2f5166e57d5ea79.css?79ebdcf2ceff427cf7a0"/>
 
     <title>Поиск новостей</title>
 </head>
@@ -128,7 +128,7 @@
     </div>
   </section>
   <footer class="footer">
-        <p class=" footer__copyright">2020 Supercite</p>
+        <p class=" footer__copyright">© 2020 Supercite, Powered by News API</p>
         <div class="footer__info">
           <a class="footer__info-main" href="./index.html" >Главная</a>
           <a class="footer__info-yapracticum" href="https://praktikum.yandex.ru/"  target="_blank">Яндекс.Практикум</a>
@@ -154,7 +154,7 @@
           </a>
         </div>
   </footer>
-     <script src="main/main.0e266aa1dd8bb8ff4cfb.js?aa372502bbe7b44b5edd"></script>
+     <script src="main/main.0e266aa1dd8bb8ff4cfb.js?79ebdcf2ceff427cf7a0"></script>
 
 </body>
 </html>
