--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main/main.6a7df2f5166e57d5ea79.css?79ebdcf2ceff427cf7a0"/>
+    <link rel="stylesheet" href="main/main.7cc03acb9407ad1223dc.css?f8f8ef47f548c248c610"/>
 
     <title>Поиск новостей</title>
 </head>
@@ -118,13 +118,16 @@
     <button class="show-more display-none" >Показать ещё</button>
   </section>
   <section class="author">
-    <div class="author__photo" ><img src = "./images/image-03.png" alt="фото автора" class="author__img" > </div>
+    <div class="author__photo" ><img src = "./images/me.jpg" alt="фото автора" class="author__img" > </div>
       <div class="author__about">
       <h2 class="author__title"> Об авторе</h2>
-      <p class="author__info"> Это блок с описанием автора проекта. Здесь следует указать,
-        как вас зовут, чем вы занимаетесь, какими технологиями разработки владеете.
-        Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились,
-        и чем можете помочь потенциальным заказчикам. </p>
+      <p class="author__info"> Меня зовут Антон, занимаюсь физикой, в какой-то момент появилось желание узнать больше о веб-разработке.
+         Поэтому в мае 2019 года начал процесс обучения в Яндекс Практикуме по направлению веб-разработчик.
+         В процессе обучения ознакомился с расширенными возможностями HTML и CSS, адаптивной версткой и работой с макетом.
+         Также большая часть времени была уделена изучению Javascript. Были изучены основы объектно-орентированного программирования, инфраструтура приложений,
+         сборка проекта Webpack. На последнем этапе обучения ознакомился с основами бэкэнда: серверная разработка на Node.js,
+         базы данных, создание API, аунтефикация и авторизация, безопасность веб-приложений.
+             </p>
     </div>
   </section>
   <footer class="footer">
@@ -154,7 +157,7 @@
           </a>
         </div>
   </footer>
-     <script src="main/main.0e266aa1dd8bb8ff4cfb.js?79ebdcf2ceff427cf7a0"></script>
+     <script src="main/main.0e266aa1dd8bb8ff4cfb.js?f8f8ef47f548c248c610"></script>
 
 </body>
 </html>
