--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main/main.7cc03acb9407ad1223dc.css?f8f8ef47f548c248c610"/>
+    <link rel="stylesheet" href="main/main.a9fcc7573a99d04ac586.css?5a23a305e02d2dd3da01"/>
 
     <title>Поиск новостей</title>
 </head>
@@ -123,7 +123,7 @@
       <h2 class="author__title"> Об авторе</h2>
       <p class="author__info"> Меня зовут Антон, занимаюсь физикой, в какой-то момент появилось желание узнать больше о веб-разработке.
          Поэтому в мае 2019 года начал процесс обучения в Яндекс Практикуме по направлению веб-разработчик.
-         В процессе обучения ознакомился с расширенными возможностями HTML и CSS, адаптивной версткой и работой с макетом.
+         В процессе обучения ознакомился с расширенными возможностями HTML и CSS, адаптивной версткой, БЭМ и работой с макетом.
          Также большая часть времени была уделена изучению Javascript. Были изучены основы объектно-орентированного программирования, инфраструтура приложений,
          сборка проекта Webpack. На последнем этапе обучения ознакомился с основами бэкэнда: серверная разработка на Node.js,
          базы данных, создание API, аунтефикация и авторизация, безопасность веб-приложений.
@@ -157,7 +157,7 @@
           </a>
         </div>
   </footer>
-     <script src="main/main.0e266aa1dd8bb8ff4cfb.js?f8f8ef47f548c248c610"></script>
+     <script src="main/main.0e266aa1dd8bb8ff4cfb.js?5a23a305e02d2dd3da01"></script>
 
 </body>
 </html>
