--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main/main.2165f06d3c2969f8bde9.css?8b7b5da48d7ddacc538e"/>
+    <link rel="stylesheet" href="main/main.2165f06d3c2969f8bde9.css?539c8e2a29982fea2b03"/>
 
     <title>Поиск новостей</title>
 </head>
@@ -14,7 +14,7 @@
           <ul class="header__menu ">
               <li class="header__main"><a href="./index.html" >Главная</a></li>
               <li class="header__saved-articles display-none"><a class = "special-href" href="./secondary/index.html" >Сохраненные статьи</a></li>
-              <li class="header__auth"><a href="./index.html" >Авторизоваться</a></li>
+              <li class="header__auth"><a class = "special-href" href="./index.html" >Авторизоваться</a></li>
               <li class="header__name-menu display-none ">
                 <h3 class="header__name"></h3>
                 <div class="header__name-icon"><img class="header__name-image" alt="иконка выхода" src = "./images/logout_01.png"/></div>
@@ -157,7 +157,7 @@
           </a>
         </div>
   </footer>
-     <script src="main/main.b26f74be5c34115a8c6b.js?8b7b5da48d7ddacc538e"></script>
+     <script src="main/main.b26f74be5c34115a8c6b.js?539c8e2a29982fea2b03"></script>
 
 </body>
 </html>
