--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
           <ul class="header__menu ">
               <li class="header__main"><a href="./index.html" >Главная</a></li>
               <li class="header__saved-articles display-none"><a class = "special-href" href="./secondary/index.html" >Сохраненные статьи</a></li>
-              <li class="header__auth"><a href="./index.html" >Авторизоваться</a></li>
+              <li class="header__auth"><a class = "special-href" href="./index.html" >Авторизоваться</a></li>
               <li class="header__name-menu display-none ">
                 <h3 class="header__name"></h3>
                 <div class="header__name-icon"><img class="header__name-image" alt="иконка выхода" src = "<%=require('./images/logout_01.png').default%>"/></div>
