--- a/src/pages/secondary/index.html
+++ b/src/pages/secondary/index.html
@@ -9,7 +9,7 @@
 <body>
   <section class="search search_saved">
         <header class="header header_saved">
-          <p class="header__tittle black">NewsExplorer</p>
+          <h1 class="header__tittle black">NewsExplorer</h1>
             <div class="header__menu  ">
                <a href="../index.html" class="header__main header__main_saved black">Главная</a>
                <a href="./index.html" class="header__saved-articles header__saved-articles_saved black">Сохраненные статьи</a>
@@ -39,7 +39,7 @@
         <div class="search-menu search-menu_saved">
           <h3 class="search-menu__uppersubtitle-saved"> Сохраненные статьи </h3> <!--это элемент блока, а не модификатор-->
           <h2 class="search-menu__tittle black search-menu__tittle_saved"> </h2>
-          <p class="search-menu__subtittle black search-menu__subtittle_saved">По ключевым словам: <span class="bold" id ="first-bold"></span><span id = "and"> </span>  <span id ="second-bold" class="bold">2 другим</span></span>  </p>
+          <p class="search-menu__subtittle black search-menu__subtittle_saved">По ключевым словам: <span class="bold" id ="first-bold"></span><span id = "and"> </span>  <span id ="second-bold" class="bold">2 другим</span>  </p>
         </div>
   </section>
   <section class="results">
