--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main/main.60d3443be6d80b2cbce0.css?19c4440cb6cea14f8f42"/>
+    <link rel="stylesheet" href="main/main.e22b13c83f8b6674f5a0.css?953d974073f11f5e92ca"/>
 
     <title>Поиск новостей</title>
 </head>
@@ -51,7 +51,7 @@
   <section class="popup-forms display-none">
 
 
-        <form class="form  form__enter display-none" name="enter">
+        <form class="form  form_enter display-none" name="enter">
           <img alt="закрыть" src = "./images/back.png" class="form__close enter-close">
           <h2 class="form__title">Вход</h2>
           <h3 class="form__input-title">Email</h3>
@@ -60,13 +60,13 @@
           <h3 class="form__input-title">Пароль</h3>
           <input type="password" name="enterpassword" minlength="2" maxlength="30"   class="form__input form__input_type-password" placeholder="Введите пароль">
           <p id = "error-enterpassword" class =  "form__error-valid">Неправильный формат пароля </p>
-          <p class = "form__error-valid form__error-valid__registration" id="error-email-or-password"></p>
+          <p class = "form__error-valid form__error-valid_registration" id="error-email-or-password"></p>
           <button class="button form__button enter-button " disabled>Войти</button>
           <p class="or-registration">Или <span class="or-registration__link or-registration__link_registration">Зарегистрироваться</span></p>
       </form>
 
 
-        <form class="form  form__registration " name="registration">
+        <form class="form  form_registration " name="registration">
           <img alt="закрыть" src = "./images/back.png" class="form__close reg-close">
           <h2 class="form__title">Регистрация</h2>
           <h3 class="form__input-title">Email</h3>
@@ -78,12 +78,12 @@
           <h3 class="form__input-title">Имя</h3>
           <input type="text" name="name" minlength="2" class="form__input form__input_type-name" placeholder="Введите своё имя">
           <p id = "error-name" class = " form__error-valid "></p>
-          <p class = "form__error-valid form__error-valid__registration" id="user-is"></p>
+          <p class = "form__error-valid form__error-valid_registration" id="user-is"></p>
           <button class="button form__button registration-button"  >Зарегистрироваться</button>
           <p class="or-registration ">Или <span class="or-registration__link or-registration__link_enter"> Войти</span></p>
         </form>
 
-        <form class="form  form__registration-ok display-none" name="registrationOk">
+        <form class="form  form_registration-ok display-none" name="registrationOk">
           <img alt="закрыть" src = "./images/back.png" class="form__close">
           <h2 class="form__title">Пользователь успешно зарегистрирован!</h2>
           <button class="or-registration__link registration-ok__subtitle"> Выполнить вход</button>
@@ -157,7 +157,7 @@
           </a>
         </div>
   </footer>
-     <script src="main/main.efb5aff3fa62e8c04783.js?19c4440cb6cea14f8f42"></script>
+     <script src="main/main.efb5aff3fa62e8c04783.js?953d974073f11f5e92ca"></script>
 
 </body>
 </html>
