--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main/main.e22b13c83f8b6674f5a0.css?c200ee15ea2081929903"/>
+    <link rel="stylesheet" href="main/main.d7106bbb70c112d806dc.css?2234cd97ad834455aa9a"/>
 
     <title>Поиск новостей</title>
 </head>
@@ -42,8 +42,8 @@
         <div class="search-menu">
           <h2 class="search-menu__tittle">Что в мире творится?</h2>
           <h3 class="search-menu__subtittle">Находите самые свежие статьи на любую тему и сохраняйте в своём личном кабинете.</h3>
+          <p class ="search-menu__error"></p>
           <form class="search-menu__form" name="search">
-            <p id = "error-enterpassword" class ="form__error-valid">Неправильный формат пароля</p>
             <input type="text" name="name"  class="search-menu__input" placeholder="Введите тему новости">
             <button class="button search-menu__button">Искать</button>
           </form>
@@ -158,7 +158,7 @@
           </a>
         </div>
   </footer>
-     <script src="main/main.6233e81c7e431fae8634.js?c200ee15ea2081929903"></script>
+     <script src="main/main.6233e81c7e431fae8634.js?2234cd97ad834455aa9a"></script>
 
 </body>
 </html>
