--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main/main.4c9b676de67f45d4f668.css?a7e76a910b58ba7cffd2"/>
+    <link rel="stylesheet" href="main/main.1759f59290ad8a259f6e.css?24539e2e76e02672b9c7"/>
 
     <title>Поиск новостей</title>
 </head>
@@ -125,7 +125,7 @@
       <p class="author__info"> Меня зовут Антон, занимаюсь физикой, в какой-то момент появилось желание узнать больше о веб-разработке.
          Поэтому в мае 2019 года начал процесс обучения в Яндекс Практикуме по направлению веб-разработчик.
          В процессе обучения ознакомился с расширенными возможностями HTML и CSS, адаптивной версткой, БЭМ и работой с макетом.
-         Также большая часть времени была уделена изучению Javascript. Были изучены основы объектно-орентированного программирования, инфраструтура приложений,
+         Также большая часть времени была уделена изучению Javascript. Были изучены основы объектно-ориентированного программирования, инфраструтура приложений,
          сборка проекта Webpack. На последнем этапе обучения ознакомился с основами бэкэнда: серверная разработка на Node.js,
          базы данных, создание API, аунтефикация и авторизация, безопасность веб-приложений.
              </p>
@@ -158,7 +158,7 @@
           </a>
         </div>
   </footer>
-     <script src="main/main.fe0f15ca94c87357bd85.js?a7e76a910b58ba7cffd2"></script>
+     <script src="main/main.fe0f15ca94c87357bd85.js?24539e2e76e02672b9c7"></script>
 
 </body>
 </html>
