--- a/secondary/index.html
+++ b/secondary/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../secondary/secondary.2ab20b2d1610ed55bca2.css?99e34e464cefd4fe0fd7">
+    <link rel="stylesheet" href="../secondary/secondary.2ab20b2d1610ed55bca2.css?9192756597f5d9ac12c0">
         <title>Поиск новостей</title>
    </head>
 <body>
@@ -48,7 +48,7 @@
          </div>
   </section>
   <footer class="footer">
-    <p class=" footer__copyright">2020 Supercite</p>
+    <p class=" footer__copyright">© 2020 Supercite, Powered by News API</p>
     <div class="footer__info">
       <a class="footer__info-main" href="../index.html" >Главная</a>
       <a class="footer__info-yapracticum" href="https://praktikum.yandex.ru/"  target="_blank">Яндекс.Практикум</a>
@@ -74,7 +74,7 @@
       </a>
     </div>
 </footer>
-  <script src="../secondary/secondary.1ca59e4498157102804a.js?99e34e464cefd4fe0fd7"></script>
+  <script src="../secondary/secondary.1ca59e4498157102804a.js?9192756597f5d9ac12c0"></script>
 </body>
 </html>
 
