--- a/src/pages/secondary/index.html
+++ b/src/pages/secondary/index.html
@@ -14,7 +14,7 @@
                <a href="../index.html" class="header__main header__main_saved black">Главная</a>
                <a href="./index.html" class="header__saved-articles header__saved-articles_saved black">Сохраненные статьи</a>
                <div class="header__name-menu header__name-menu_saved ">
-                  <h3 class="header__name  black"></h3>
+                  <h3 class="header__name  black"> </h3>
                   <div class="header__name-icon"><img class="header__name-image"  alt="иконка выхода" src = "../<%=require('../../images/logout-black_01.png').default%>"/></div>
                  </div>
             </div>
@@ -30,7 +30,7 @@
                   <li class="header__main header__main_mobile"><a href="../index.html" >Главная</a></li>
                   <li class="header__saved-articles header__saved-articles_mobile "><a href="./index.html" >Сохраненные статьи</a></li>
                   <li class = "header__name-menu header__name-menu_mobile ">
-                    <h3 class="header__name header__name_mobile "></h3>
+                    <h3 class="header__name header__name_mobile "> </h3>
                     <div class="header__name header__name-icon_mobile"><img class="header__name-image" alt="иконка выхода" src = "../<%=require('../../images/logout.png').default%>"/></div>
                   </li>
                 </ul>
@@ -48,7 +48,7 @@
          </div>
   </section>
   <footer class="footer">
-    <p class=" footer__copyright">2020 Supercite</p>
+    <p class=" footer__copyright">© 2020 Supercite, Powered by News API</p>
     <div class="footer__info">
       <a class="footer__info-main" href="../index.html" >Главная</a>
       <a class="footer__info-yapracticum" href="https://praktikum.yandex.ru/"  target="_blank">Яндекс.Практикум</a>
