--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
               <li class="header__saved-articles display-none"><a class = "special-href" href="./secondary/index.html" >Сохраненные статьи</a></li>
               <li class="header__auth"><a class = "special-href" href="./index.html" >Авторизоваться</a></li>
               <li class="header__name-menu display-none ">
-                <h3 class="header__name"></h3>
+                <h3 class="header__name"> </h3>
                 <div class="header__name-icon"><img class="header__name-image" alt="иконка выхода" src = "<%=require('./images/logout_01.png').default%>"/></div>
               </li>
             </ul>
@@ -33,7 +33,7 @@
                     <li class="header__saved-articles header__saved-articles_mobile display-none"><a href="./secondary/index.html" >Сохраненные статьи</a></li>
                     <li class="header__auth header__auth_mobile "><a href="./index.html" >Авторизоваться</a></li>
                     <li class = "header__name-menu header__name-menu_mobile display-none">
-                      <h3 class="header__name header__name_mobile "></h3>
+                      <h3 class="header__name header__name_mobile "> </h3>
                       <div class="header__name header__name-icon_mobile"><img class="header__name-image" alt="иконка выхода" src = "<%=require('./images/logout.png').default%>"/></div>
                     </li>
                   </ul>
@@ -42,16 +42,18 @@
         <div class="search-menu">
           <h2 class="search-menu__tittle">Что в мире творится?</h2>
           <h3 class="search-menu__subtittle">Находите самые свежие статьи на любую тему и сохраняйте в своём личном кабинете.</h3>
+          <p class ="search-menu__error"> </p>
           <form class="search-menu__form" name="search">
             <input type="text" name="name"  class="search-menu__input" placeholder="Введите тему новости">
             <button class="button search-menu__button">Искать</button>
           </form>
         </div>
+
   </section>
   <section class="popup-forms display-none">
 
 
-        <form class="form  form__enter display-none" name="enter">
+        <form class="form  form_enter display-none" name="enter">
           <img alt="закрыть" src = "<%=require('./images/back.png').default%>" class="form__close enter-close">
           <h2 class="form__title">Вход</h2>
           <h3 class="form__input-title">Email</h3>
@@ -59,14 +61,14 @@
           <p id = "error-enteremail" class = "form__error-valid">Неправильный формат email </p>
           <h3 class="form__input-title">Пароль</h3>
           <input type="password" name="enterpassword" minlength="2" maxlength="30"   class="form__input form__input_type-password" placeholder="Введите пароль">
-          <p id = "error-enterpassword" class =  "form__error-valid">Неправильный формат пароля </p>
-          <p class = "form__error-valid form__error-valid__registration" id="error-email-or-password"></p>
+          <p id = "error-enterpassword" class ="form__error-valid">Неправильный формат пароля </p>
+          <p class = "form__error-valid form__error-valid_registration" id="error-email-or-password"></p>
           <button class="button form__button enter-button " disabled>Войти</button>
           <p class="or-registration">Или <span class="or-registration__link or-registration__link_registration">Зарегистрироваться</span></p>
       </form>
 
 
-        <form class="form  form__registration " name="registration">
+        <form class="form  form_registration " name="registration">
           <img alt="закрыть" src = "<%=require('./images/back.png').default%>" class="form__close reg-close">
           <h2 class="form__title">Регистрация</h2>
           <h3 class="form__input-title">Email</h3>
@@ -78,12 +80,12 @@
           <h3 class="form__input-title">Имя</h3>
           <input type="text" name="name" minlength="2" class="form__input form__input_type-name" placeholder="Введите своё имя">
           <p id = "error-name" class = " form__error-valid "></p>
-          <p class = "form__error-valid form__error-valid__registration" id="user-is"></p>
+          <p class = "form__error-valid form__error-valid_registration" id="user-is"></p>
           <button class="button form__button registration-button"  >Зарегистрироваться</button>
           <p class="or-registration ">Или <span class="or-registration__link or-registration__link_enter"> Войти</span></p>
         </form>
 
-        <form class="form  form__registration-ok display-none" name="registrationOk">
+        <form class="form  form_registration-ok display-none" name="registrationOk">
           <img alt="закрыть" src = "<%=require('./images/back.png').default%>" class="form__close">
           <h2 class="form__title">Пользователь успешно зарегистрирован!</h2>
           <button class="or-registration__link registration-ok__subtitle"> Выполнить вход</button>
@@ -124,7 +126,7 @@
       <p class="author__info"> Меня зовут Антон, занимаюсь физикой, в какой-то момент появилось желание узнать больше о веб-разработке.
          Поэтому в мае 2019 года начал процесс обучения в Яндекс Практикуме по направлению веб-разработчик.
          В процессе обучения ознакомился с расширенными возможностями HTML и CSS, адаптивной версткой, БЭМ и работой с макетом.
-         Также большая часть времени была уделена изучению Javascript. Были изучены основы объектно-орентированного программирования, инфраструтура приложений,
+         Также большая часть времени была уделена изучению Javascript. Были изучены основы объектно-ориентированного программирования, инфраструтура приложений,
          сборка проекта Webpack. На последнем этапе обучения ознакомился с основами бэкэнда: серверная разработка на Node.js,
          базы данных, создание API, аунтефикация и авторизация, безопасность веб-приложений.
              </p>
